<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStoryActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/ic_place_holder"
        android:contentDescription="@string/photo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <Button
            android:id="@+id/btn_cameraX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:text="@string/camerax"
            android:contentDescription="@string/camerax"/>

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/gallery"
            android:scaleType="fitCenter"
            android:contentDescription="@string/gallery"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/ed_add_desciption"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:lines="9"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_border"
        android:hint="@string/story_desc"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/upload"/>

</LinearLayout>