<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    app:cardCornerRadius="15dp"
    tools:context=".StoryDetailActivity">

    <ImageView
        android:id="@+id/iv_story_detail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/user_story_detail"
        android:scaleType="centerCrop"
        android:transitionName="photo"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_story_detail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:transitionName="@string/name" />

    <TextView
        android:id="@+id/tv_desc_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name_detail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/user_story_description"
        android:textSize="20sp"
        android:transitionName="@string/user_story_description" />

</RelativeLayout>